[package]
name = "rap-server"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
hyper = { version = "0.14.27", features = ["full"] }
rens-activity-pub = { path = ".." }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
