[package]
name = "rap-server"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
rens-activity-pub = { path = ".." }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
clap = { workspace = true }
axum-prometheus = "0.4"
log = "0.4"
env_logger = "0.10"
