[package]
name = "rap-client-cli"
description = "TBD"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
rap-core.workspace = true
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
